playbooks/roles/clickhouse/templates/otel-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  ports:
  - port: 4317
    targetPort: 4317
    protocol: TCP
    name: otlp-grpc
  - port: 4318
    targetPort: 4318
    protocol: TCP
    name: otlp-http
  - port: 14250
    targetPort: 14250
    protocol: TCP
    name: jaeger-grpc
  - port: 14268
    targetPort: 14268
    protocol: TCP
    name: jaeger-thrift-http
  - port: 9411
    targetPort: 9411
    protocol: TCP
    name: zipkin
  - port: 24224
    targetPort: 24224
    protocol: TCP
    name: fluent-forward
  selector:
    app: otel-collector
